--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap" rel="stylesheet">
     <title>Kevin Ventura</title>
 </head>
 <body>
+<section id="intro">
     
+    <p>Hi, my name is <span> Kevin Ventura</span></p>
+    
+    <h2>I am front end developer</h2>
+
+    <p>I specialize in HTML, CSS, And Javascript.</p>
+
+    <p>I'm currently working on a ecommerce web app, with the <a href="#"> MERN Stack </a>.</p>
+
+</section>
 </body>
 </html>
