--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
     <title>Kevin Ventura</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <h1><a href="index.html">Kevin Ventura</a></h1>
+            </li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#" target="_blank">LinkedIn</a></li>
+            <li><a href="#" target="_blank">Github</a></li>
+            <li><a href="#">Resume</a></li>
+        </ul>
+    </nav>
+
+
     <section id="intro">
         <p class="name">Hi, my name is <span> Kevin Ventura</span></p>
         
