nav updated Fa icons added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c755409422.js" crossorigin="anonymous"></script>
     <title>Kevin Ventura</title>
 </head>
 <body>
@@ -22,8 +23,16 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#" target="_blank">LinkedIn</a></li>
-            <li><a href="#" target="_blank">Github</a></li>
+            <li>
+                <a href="#" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+             </li>
+            <li>
+                <a href="#" target="_blank">
+                    <i class="fa-brands fa-square-github"></i>
+                </a>
+            </li>
             <li><a href="#">Resume</a></li>
         </ul>
     </nav>
