--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <nav>
         <ul>
             <li>
-                <h1><a href="index.html">Kevin Ventura</a></h1>
+                
+                <h1>
+                    <span><i class="fa-solid fa-code"></i></span>
+                    <a href="index.html">Kevin Ventura</a>
+                </h1>
             </li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#">About</a></li>
@@ -33,7 +37,7 @@
                     <i class="fa-brands fa-square-github"></i>
                 </a>
             </li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="#" class="button">Resume</a></li>
         </ul>
     </nav>
 
