--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="intro">
         <p class="name">Hi, my name is <span> Kevin Ventura</span></p>
         
-        <h2>I am front end developer</h2>
+        <h2>I am front End developer</h2>
 
         <p>I specialize in HTML, CSS, And Javascript.</p>
 
@@ -59,7 +59,38 @@
             I'm always interesrted in hearing about new colaborative opportunites, web app ideas, or design work.
         </p>
 
-        <p><a href="mailto:kevcodes@gmail.com">Email me</a></p>
+        <p>
+            <a href="mailto:kevcodes@gmail.com">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
+        </p>
     </section>
+
+    <footer>
+        <h2>Kevin Ventura &middot; Front End Developer</h2>
+
+        <ul>
+            <li>
+                <a href="#" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a> 
+            </li>
+
+            <li>
+                <a href="#" target="_blank">
+                    <i class="fa-brands fa-square-github"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="mailto:kevcodes@gmail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+            </li>
+        </ul>
+
+        <p><small>&copy; 2022 Kevin Ventura. All rights reserved</small></p>
+    </footer>
+    
 </body>
 </html>
