--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 
         <ul>
             <li>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/in/kevin-ventura-602419240/"  target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                 </a> 
             </li>
 
             <li>
-                <a href="#" target="_blank">
+                <a href="https://github.com/kevcoder247" target="_blank">
                     <i class="fa-brands fa-square-github"></i>
                 </a>
             </li>
