wip: css update

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <title>Kevin Ventura</title>
 </head>
 <body>
-    <nav>
+    <nav class="about-nav">
         <ul>
             <li>
                 
@@ -47,7 +47,7 @@
     <div class="projects about-me">
     
         <section id="projects">
-        <h2>About Me</h2>
+        <h2 class="about-me-h2">About Me</h2>
         <article>
             <div class="text">
                 <h4>Latest Project</h4>
