about page image updated

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <div class="projects about-me">
     
         <section id="projects">
-        <h2 class="about-me-h2">About Me</h2>
+        <h2 class="about-me-h2">About Kevin Ventura</h2>
         <article>
             <div class="text">
                 <h4>Latest Project</h4>
@@ -61,7 +61,7 @@
                 <li>JavaScript</li>
                 </ul>
             </div>
-            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png" alt="Screenshot of the Wall of Wonder." />
+            <img src="img/me.png" alt="Picture of myself">
         
         </article>    
     </section>
