about text updated

--- a/about.html
+++ b/about.html
@@ -47,14 +47,13 @@
     <div class="projects about-me">
     
         <section id="projects">
-        <h2 class="about-me-h2">About Kevin Ventura</h2>
+    
         <article>
             <div class="text">
-                <h4>Latest Project</h4>
-                <h3>Wall of Wonder</h3>
+                <h4>A little About me</h4>
 
-                <p class="black-box">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere in the description. A link looks like <a href="https://frontendmasters.github.io/grid-flexbox-v2/">this</a>, and multiple links look <a href="#">like this</a> and <a href="#">like this</a>.</p>
-                <h4>My Favoriate Technologies include:</h4>
+                <p class="black-box">I am a Full Stack Developer that focuses on Javascript and front end frameworks such as React and Django.  I have a passion for CSS,  and Single page applications. To grow my skills I focus on building web apps with the MERN(Mongoose, Express, React, Node.js) stack..</p>
+                <h4>My Favoriate Technologies:</h4>
                 <ul>
                 <li>HTML</li>
                 <li>CSS</li>
