--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <div class="text">
                 <h4>A little About me</h4>
 
-                <p class="black-box">I am a Full Stack Developer that focuses on Javascript and front end frameworks such as React and Django.  I have a passion for CSS,  and Single page applications. To grow my skills I focus on building web apps with the MERN(Mongoose, Express, React, Node.js) stack..</p>
+                <p class="black-box">I am a Web Developer that focuses on Javascript and front end frameworks such as React and Django.  I have a passion for CSS,  and Single page applications. To grow my skills I focus on building web apps with the MERN(Mongoose, Express, React, Node.js) stack..</p>
                 <h4>My Favoriate Technologies:</h4>
                 <ul>
                 <li>HTML</li>
@@ -70,7 +70,7 @@
 <div class="gradient"></div>
     
 <footer class="about-footer">
-    <h2>Kevin Ventura &middot; Full Stack developer</h2>
+    <h2>Kevin Ventura &middot; Web developer</h2>
 
     <ul>
         <li>
