wip: text updated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <p>I specialize in HTML, CSS, And Javascript (React/Node).</p>
 
-        <p>I'm currently working on a ecommerce web app, with the <a href="https://www.mongodb.com/mern-stack" target="_blank"> MERN Stack </a>.</p>
+        <p>I enjoy working on web apps, with the <a href="https://www.mongodb.com/mern-stack" target="_blank"> MERN Stack </a>.</p>
     </section>
     
     <div class="gradient"></div>
