projects text updated

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="text">
             
               <h3>TracCalorie</h3>
-              <p class="black-box">TracCalorie lets you track your meals, and the amount of calories in your meals.  You can also view how many calories all your meals haev together.  TracCalorie also lets you edit, update and delete meals in case you make a mistake when adding a new meal.</p>
+              <p class="black-box">TracCalorie lets you track your meals, and the amount of calories in your meals.  You can also view how many calories all your meals have together.  TracCalorie also lets you edit, update and delete meals in case you make a mistake when adding a new meals.</p>
               <h4>Technologies used include:</h4>
               <ul>
                 <li>HTML</li>
