--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                     <i class="fa-brands fa-square-github"></i>
                 </a>
             </li>
-            <li><a href="#" class="button">Resume</a></li>
+            <li><a href="resume.html" class="button">Resume</a></li>
         </ul>
     </nav>
 
