--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li>Fire base</li>
                 </ul>
             </div>
-            <a href="https://bingelist-project.netlify.app/" target="_blank"><img src="img/project1.png" class="project1-img project2-img" alt="Screenshot of bingelist project."/></a>
+            <a href="https://bingelist-project.netlify.app/bingelist/dashboard" target="_blank"><img src="img/project1.png" class="project1-img project2-img" alt="Screenshot of bingelist project."/></a>
         
         </article>
 
